--- a/Views/Cadastro/Details.cshtml
+++ b/Views/Cadastro/Details.cshtml
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Volte para a lista</a>
+    <a style="text-decoration-line:none" class=" text-dark" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a style="text-decoration-line:none" class=" text-dark" asp-action="Index">Volte para a lista</a>
 </div>
