--- a/Views/Login/Edit.cshtml
+++ b/Views/Login/Edit.cshtml
@@ -24,14 +24,14 @@
                 <span asp-validation-for="LoginSenha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <input style="margin-top: 5px; background-color: #796DC7;" type="submit" value="Salvar" class="btn" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Volte para a lista</a>
+    <a style="text-decoration-line:none" class=" text-dark" asp-action="Index">Volte para a lista</a>
 </div>
 
 @section Scripts {
