--- a/Views/Cadastro/Create.cshtml
+++ b/Views/Cadastro/Create.cshtml
@@ -43,14 +43,14 @@
                 <span asp-validation-for="Foto" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input style="margin-top: 5px; background-color: #796DC7;" type="submit" value="Criar" class="btn" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Volte para a lista</a>
+    <a style="text-decoration-line:none" class="text-black" asp-action="Index">Volte para a lista</a>
 </div>
 
 @section Scripts {
