--- a/Views/Cadastro/Delete.cshtml
+++ b/Views/Cadastro/Delete.cshtml
@@ -51,7 +51,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volte para a lista</a>
+        <input style="margin-top: 5px; background-color: #796DC7;" type="submit" value="Deletar" class="btn " /> |
+        <a style="text-decoration-line:none" class=" text-dark" asp-action="Index">Volte para a lista</a>
     </form>
 </div>
