--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Criar novo</a>
+    <a style="text-decoration-line:none" class=" text-dark" asp-action="Create">Criar novo</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.LoginSenha)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                    <a style="text-decoration-line:none" class=" text-dark" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a style="text-decoration-line:none" class=" text-dark" asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                    <a style="text-decoration-line:none" class=" text-dark" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
